--- a/index.html
+++ b/index.html
@@ -1,11 +1,87 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=https://drive.google.com/drive/folders/1JtrZacRNxd-lNBIzJTUewBOdIkZPxipV" />
-    <title>Chuyển hướng đến Hệ thống văn bản</title>
-  </head>
-  <body>
-    <p>Nếu bạn không được chuyển hướng, bấm vào <a href="https://drive.google.com/drive/folders/1JtrZacRNxd-lNBIzJTUewBOdIkZPxipV">đây</a>.</p>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hệ thống Văn bản hiện hành</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: #f2f4f8;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+
+    .container {
+      background: #ffffff;
+      padding: 30px 40px;
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
+      width: 90%;
+    }
+
+    img {
+      max-width: 100px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      font-size: 24px;
+      margin-bottom: 12px;
+      color: #1e3a8a;
+    }
+
+    p {
+      font-size: 16px;
+      color: #4b5563;
+      margin-bottom: 20px;
+    }
+
+    .button {
+      display: inline-block;
+      padding: 12px 24px;
+      font-size: 16px;
+      font-weight: bold;
+      color: white;
+      background: #2563eb;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+
+    .button:hover {
+      background: #1d4ed8;
+    }
+
+    footer {
+      margin-top: 30px;
+      font-size: 13px;
+      color: #9ca3af;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Emblem_of_Vietnam.svg/1024px-Emblem_of_Vietnam.svg.png" alt="Logo đơn vị" />
+
+    <h1>Hệ thống Văn bản hiện hành</h1>
+    <p>Trang thông tin truy cập nhanh đến các văn bản pháp luật, quy định nội bộ và hướng dẫn đang được đơn vị áp dụng.</p>
+
+    <a class="button" href="https://drive.google.com/drive/folders/1JtrZacRNxd-lNBIzJTUewBOdIkZPxipV" target="_blank">
+      Truy cập thư mục văn bản
+    </a>
+  </div>
+
+  <footer>
+    &copy; 2025 - Đơn vị của bạn | Powered by GitHub Pages
+  </footer>
+</body>
 </html>
