--- a/index.html
+++ b/index.html
@@ -5,55 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hệ thống Văn bản hiện hành</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       padding: 0;
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: #f2f4f8;
+      background-color: #f2f4f8;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       min-height: 100vh;
-      text-align: center;
     }
+
     .container {
-      background: #ffffff;
-      padding: 30px 40px;
+      background: #fff;
+      padding: 40px 30px;
       border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      max-width: 600px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      max-width: 500px;
       width: 90%;
     }
-    img {
-      max-width: 100px;
+
+    .logo {
+      width: 100px;
       margin-bottom: 20px;
     }
+
     h1 {
-      font-size: 24px;
-      margin-bottom: 12px;
       color: #1e3a8a;
+      font-size: 24px;
+      margin-bottom: 15px;
     }
+
     p {
+      color: #374151;
       font-size: 16px;
-      color: #4b5563;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
     }
-    .button {
+
+    a.button {
       display: inline-block;
       padding: 12px 24px;
-      font-size: 16px;
-      font-weight: bold;
+      background-color: #2563eb;
       color: white;
-      background: #2563eb;
-      border: none;
-      border-radius: 8px;
       text-decoration: none;
-      transition: background 0.3s;
+      font-weight: bold;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
     }
-    .button:hover {
-      background: #1d4ed8;
+
+    a.button:hover {
+      background-color: #1e40af;
     }
+
     footer {
       margin-top: 30px;
       font-size: 13px;
@@ -63,15 +71,16 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Emblem_of_Vietnam.svg/1024px-Emblem_of_Vietnam.svg.png" alt="Logo đơn vị" />
+    <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Emblem_of_Vietnam.svg/512px-Emblem_of_Vietnam.svg.png" alt="Logo quốc huy" />
+
     <h1>Hệ thống Văn bản hiện hành</h1>
-    <p>Trang thông tin truy cập nhanh đến các văn bản pháp luật, quy định nội bộ và hướng dẫn đang được đơn vị áp dụng.</p>
-    <a class="button" href="https://drive.google.com/drive/folders/1AbCdEfGhIjKlmnOpQrStUvWxYz" target="_blank">
-      Truy cập thư mục văn bản
-    </a>
+    <p>Trang tổng hợp các văn bản pháp luật, quy định nội bộ và hướng dẫn nghiệp vụ đang áp dụng tại đơn vị.</p>
+
+    <a class="button" href="https://drive.google.com/drive/folders/1AbCdEfGhIjKlmnOpQrStUvWxYz" target="_blank">Truy cập thư mục văn bản</a>
+
+    <footer>
+      &copy; 2025 - Đơn vị bạn | Phát triển bởi GitHub Pages
+    </footer>
   </div>
-  <footer>
-    &copy; 2025 - Đơn vị của bạn | Powered by GitHub Pages
-  </footer>
 </body>
 </html>
