--- a/dangky.html
+++ b/dangky.html
@@ -67,7 +67,7 @@
   <div class="container">
     <h1>Đăng ký tài khoản</h1>
     <p>Vui lòng nhấn nút bên dưới để đăng ký thông tin tài khoản.</p>
-    <a class="button" href="https://forms.gle/your-google-form-link" target="_blank">Mở biểu mẫu đăng ký</a>
+    <a class="button" href="https://docs.google.com/forms/d/11MZ2SPcz_B-nvne0cUl3jJUjqOMYqwxEVsNG1Z7VJbg/edit" target="_blank">Mở biểu mẫu đăng ký</a>
   </div>
 </body>
 </html>
