--- a/dangky.html
+++ b/dangky.html
@@ -5,13 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Đăng ký tài khoản</title>
   <style>
-    body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f2f4f8;
-      margin: 0;
-      padding: 0;
-    }
-
     nav {
       background-color: #1e3a8a;
       display: flex;
@@ -30,29 +23,16 @@
       color: #f87171;
     }
 
+    iframe {
+      width: 100%;
+      height: 500px;
+      border: none;
+    }
+
     .container {
-      max-width: 600px;
-      margin: 50px auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-
-    a.button {
-      display: inline-block;
-      padding: 12px 24px;
-      background-color: #2563eb;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 8px;
-      margin-top: 20px;
-    }
-
-    a.button:hover {
-      background-color: #1e40af;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
     }
   </style>
 </head>
@@ -65,9 +45,8 @@
   </nav>
 
   <div class="container">
-    <h1>Đăng ký tài khoản</h1>
-    <p>Vui lòng nhấn nút bên dưới để đăng ký thông tin tài khoản.</p>
-    <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLScD0aRxVfv6vwq1atLaQ5i1o-5FQSfvM-Lxij1F9oo9KrchxA/viewform?usp=header" target="_blank">Mở biểu mẫu đăng ký</a>
+    <h2>Đăng ký tài khoản</h2>
+    <iframe src="https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbys182oxpRd58aeEXyvb-_flZQ0jn5zqWiRZpkH2W5o5XKw118RGlTDWxek3I1lNYDJ/exec/exec"></iframe>
   </div>
 </body>
 </html>
