--- a/dangky.html
+++ b/dangky.html
@@ -46,7 +46,7 @@
 
   <div class="container">
     <h2>Đăng ký tài khoản</h2>
-    <iframe src="https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbys182oxpRd58aeEXyvb-_flZQ0jn5zqWiRZpkH2W5o5XKw118RGlTDWxek3I1lNYDJ/exec/exec"></iframe>
+    <iframe src="https://script.google.com/macros/s/AKfycbys182oxpRd58aeEXyvb-_flZQ0jn5zqWiRZpkH2W5o5XKw118RGlTDWxek3I1lNYDJ/exec"></iframe>
   </div>
 </body>
 </html>
