--- a/dangky.html
+++ b/dangky.html
@@ -5,48 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Đăng ký tài khoản</title>
   <style>
-    nav {
-      background-color: #1e3a8a;
-      display: flex;
-      justify-content: center;
-      padding: 12px 0;
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f4f8;
+      padding: 40px;
+      text-align: center;
     }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
+    input {
+      padding: 10px;
+      width: 80%;
+      margin: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
-
-    nav a:hover {
-      color: #f87171;
-    }
-
-    iframe {
-      width: 100%;
-      height: 500px;
+    button {
+      padding: 10px 20px;
+      background-color: #2563eb;
+      color: white;
       border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
     }
-
-    .container {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
+    button:hover {
+      background-color: #1e40af;
     }
   </style>
 </head>
 <body>
-  <nav>
-    <a href="index.html">Trang chủ</a>
-    <a href="tracuu.html">Tra cứu văn bản</a>
-    <a href="dangky.html">Đăng ký tài khoản</a>
-    <a href="dangnhap.html">Đăng nhập</a>
-  </nav>
+  <h2>Đăng ký tài khoản</h2>
+  <form id="registerForm">
+    <input type="text" id="username" placeholder="Tên đăng nhập" required><br>
+    <input type="password" id="password" placeholder="Mật khẩu" required><br>
+    <button type="submit">Đăng ký</button>
+  </form>
+  <p id="response"></p>
 
-  <div class="container">
-    <h2>Đăng ký tài khoản</h2>
-    <iframe src="https://script.google.com/macros/s/AKfycbys182oxpRd58aeEXyvb-_flZQ0jn5zqWiRZpkH2W5o5XKw118RGlTDWxek3I1lNYDJ/exec"></iframe>
-  </div>
+  <script>
+    document.getElementById("registerForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+
+      fetch("YOUR_SCRIPT_URL", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ username, password })
+      })
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById("response").innerText = data;
+      });
+    });
+  </script>
 </body>
 </html>
