--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
 
   <!-- Nội dung trang -->
   <div class="container">
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Emblem_of_Vietnam.svg/512px-Emblem_of_Vietnam.svg.png" alt="Logo quốc huy" />
+    <img class="logo" src="https://drive.google.com/file/d/1QrX7Oy8HFaN9MYMYzbrtHb_2NMxkoIiQ/view?usp=sharing" alt="TRƯỜNG ĐẠI HỌC CÔNG NGHIỆP HÀ NỘI" />
 
-    <h1>Hệ thống Văn bản hiện hành</h1>
-    <p>Trang thông tin truy cập nhanh đến các văn bản pháp luật, quy định nội bộ và hướng dẫn đang được đơn vị áp dụng.</p>
+    <h1>Hệ thống Văn bản nội bộ Trường Đại học Công nghiệp Hà Nội</h1>
+    <p>Trang thông tin tra cứu các văn bản pháp luật, quy định nội bộ và hướng dẫn.</p>
 
     <a class="button" href="https://drive.google.com/drive/folders/1AbCdEfGhIjKlmnOpQrStUvWxYz" target="_blank">
       Truy cập thư mục văn bản
     </a>
 
     <footer>
-      &copy; 2025 - Đơn vị của bạn | Powered by GitHub Pages
+      &copy; 2025 - Phòng Thanh tra giáo dục | Powered by GitHub Pages
     </footer>
   </div>
 </body>
