--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <!-- Nội dung trang -->
   <div class="container">
-    <img class="logo" src="https://drive.google.com/file/d/1QrX7Oy8HFaN9MYMYzbrtHb_2NMxkoIiQ/view?usp=sharing" alt="TRƯỜNG ĐẠI HỌC CÔNG NGHIỆP HÀ NỘI" />
+    <img class="logo" src="https://drive.google.com/uc?export=view&id=1QrX7Oy8HFaN9MYMYzbrtHb_2NMxkoIiQ" alt="TRƯỜNG ĐẠI HỌC CÔNG NGHIỆP HÀ NỘI" />
 
     <h1>Hệ thống Văn bản nội bộ Trường Đại học Công nghiệp Hà Nội</h1>
     <p>Trang thông tin tra cứu các văn bản pháp luật, quy định nội bộ và hướng dẫn.</p>
