--- a/index.html
+++ b/index.html
@@ -102,10 +102,15 @@
 
   <!-- Nội dung trang -->
   <div class="container">
-    <img class="logo" src="https://drive.google.com/uc?export=view&id=1QrX7Oy8HFaN9MYMYzbrtHb_2NMxkoIiQ" alt="TRƯỜNG ĐẠI HỌC CÔNG NGHIỆP HÀ NỘI" />
+    <img class="logo" src="https://drive.google.com/uc?export=view&id=1QrX7Oy8HFaN9MYMYzbrtHb_2NMxkoIiQ" alt="Logo đơn vị" style="width: 120px; margin-bottom: 20px;" />
 
-    <h1>Hệ thống Văn bản nội bộ Trường Đại học Công nghiệp Hà Nội</h1>
-    <p>Trang thông tin tra cứu các văn bản pháp luật, quy định nội bộ và hướng dẫn.</p>
+<h1>
+  Hệ thống văn bản nội bộ<br />
+  Trường Đại học Công nghiệp Hà Nội
+</h1>
+
+<p>Trang thông tin tra cứu các văn bản pháp luật, quy định nội bộ và hướng dẫn.</p>
+
 
     <a class="button" href="https://drive.google.com/drive/folders/1AbCdEfGhIjKlmnOpQrStUvWxYz" target="_blank">
       Truy cập thư mục văn bản
