--- a/dangnhap.html
+++ b/dangnhap.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Đăng ký tài khoản</title>
+  <title>Đăng nhập</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -33,29 +33,27 @@
   </style>
 </head>
 <body>
-  <h2>Đăng ký tài khoản</h2>
-  <form id="registerForm">
+  <h2>Đăng nhập</h2>
+  <form id="loginForm">
     <input type="text" id="username" placeholder="Tên đăng nhập" required><br>
     <input type="password" id="password" placeholder="Mật khẩu" required><br>
-    <button type="submit">Đăng ký</button>
+    <button type="submit">Đăng nhập</button>
   </form>
-  <p id="response"></p>
+  <p id="loginResponse"></p>
 
   <script>
-    document.getElementById("registerForm").addEventListener("submit", function(e) {
+    document.getElementById("loginForm").addEventListener("submit", function(e) {
       e.preventDefault();
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
-      fetch("https://script.google.com/macros/s/AKfycbzP28UIak9EL1qIJ3RsVnru_OZHh05y-IosneR7bqJ9RngyLl9z9Gffc6pwF73ruOO3/exec", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ username, password })
-      })
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById("response").innerText = data;
-      });
+      const url = `YOUR_SCRIPT_URL?username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`;
+
+      fetch(url)
+        .then(res => res.text())
+        .then(data => {
+          document.getElementById("loginResponse").innerText = data;
+        });
     });
   </script>
 </body>
