--- a/dangnhap.html
+++ b/dangnhap.html
@@ -49,7 +49,7 @@
 
       const url = `YOUR_SCRIPT_URL?username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`;
 
-      fetch(url)
+      fetch(https://script.google.com/macros/s/AKfycbzP28UIak9EL1qIJ3RsVnru_OZHh05y-IosneR7bqJ9RngyLl9z9Gffc6pwF73ruOO3/exec)
         .then(res => res.text())
         .then(data => {
           document.getElementById("loginResponse").innerText = data;
