--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
   <!-- Nội dung trang -->
   <div class="container">
-    <img class="logo" src="https://drive.google.com/uc?export=view&id=1QrX7Oy8HFaN9MYMYzbrtHb_2NMxkoIiQ" alt="Logo đơn vị" style="width: 120px; margin-bottom: 20px;" />
-
+    <img src="https://drive.google.com/uc?export=view&id=1QrX7Oy8HFaN9MYMYzbrtHb_2NMxkoIiQ"
+     alt="Logo trường" style="max-width: 120px; height: auto; margin-bottom: 20px;" />
 <h1>
   Hệ thống văn bản nội bộ<br />
   Trường Đại học Công nghiệp Hà Nội
