--- a/index.html
+++ b/index.html
@@ -102,8 +102,15 @@
 
   <!-- Nội dung trang -->
   <div class="container">
-    <img src="https://drive.google.com/uc?export=view&id=1QrX7Oy8HFaN9MYMYzbrtHb_2NMxkoIiQ"
-     alt="Logo trường" style="max-width: 120px; height: auto; margin-bottom: 20px;" />
+    <img class="logo" src="https://i.imgur.com/AqN9Rle.png" alt="Logo đơn vị" style="width: 120px; margin-bottom: 20px;" />
+
+<h1>
+  Hệ thống văn bản nội bộ<br />
+  Trường Đại học Công nghiệp Hà Nội
+</h1>
+
+<p>Trang thông tin tra cứu các văn bản pháp luật, quy định nội bộ và hướng dẫn.</p>
+
 <h1>
   Hệ thống văn bản nội bộ<br />
   Trường Đại học Công nghiệp Hà Nội
