--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hệ thống Văn bản hiện hành</title>
+  <title>Hệ thống Văn bản nội bộ</title>
   <style>
     * {
       box-sizing: border-box;
@@ -16,7 +16,6 @@
       background-color: #f2f4f8;
     }
 
-    /* Navbar */
     nav {
       background-color: #1e3a8a;
       display: flex;
@@ -33,36 +32,36 @@
     }
 
     nav a:hover {
-      color: #f87171; /* đỏ nhạt */
+      color: #f87171;
     }
 
-    /* Nội dung chính */
     .container {
       background: #ffffff;
       padding: 40px 30px;
       border-radius: 16px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-      max-width: 500px;
+      max-width: 600px;
       width: 90%;
       margin: 40px auto;
       text-align: center;
     }
 
     .logo {
-      width: 100px;
+      width: 120px;
       margin-bottom: 20px;
     }
 
     h1 {
       font-size: 24px;
-      margin-bottom: 15px;
       color: #1e3a8a;
+      line-height: 1.5;
+      margin-bottom: 10px;
     }
 
     p {
       color: #4b5563;
       font-size: 16px;
-      margin-bottom: 25px;
+      margin-bottom: 20px;
     }
 
     a.button {
@@ -76,7 +75,6 @@
       border-radius: 8px;
       text-decoration: none;
       transition: background-color 0.3s ease;
-      margin-top: 10px;
     }
 
     a.button:hover {
@@ -86,8 +84,8 @@
     footer {
       margin-top: 30px;
       font-size: 13px;
-      text-align: center;
       color: #6b7280;
+      text-align: center;
     }
   </style>
 </head>
@@ -100,14 +98,17 @@
     <a href="dangnhap.html">Đăng nhập</a>
   </nav>
 
-  <!-- Nội dung trang -->
+  <!-- Nội dung chính -->
   <div class="container">
-    <img class="logo" src="https://i.imgur.com/AqN9Rle.png" alt="Logo đơn vị" style="width: 120px; margin-bottom: 20px;" />
-<h1>
-  Hệ thống văn bản nội bộ<br />
-  Trường Đại học Công nghiệp Hà Nội
-</h1>
-<p>Trang thông tin tra cứu các văn bản pháp luật, quy định nội bộ và hướng dẫn.</p>
+    <img class="logo" src="https://i.imgur.com/AqN9Rle.png" alt="Logo đơn vị" />
+
+    <h1>
+      Hệ thống văn bản nội bộ<br />
+      Trường Đại học Công nghiệp Hà Nội
+    </h1>
+
+    <p>Trang thông tin tra cứu các văn bản pháp luật, quy định nội bộ và hướng dẫn.</p>
+
     <a class="button" href="https://drive.google.com/drive/folders/1AbCdEfGhIjKlmnOpQrStUvWxYz" target="_blank">
       Truy cập thư mục văn bản
     </a>
