--- a/dangnhap.html
+++ b/dangnhap.html
@@ -6,40 +6,90 @@
   <title>Đăng nhập</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f4f8;
-      padding: 40px;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f2f4f8;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav {
+      background-color: #1e3a8a;
+      display: flex;
+      justify-content: center;
+      padding: 12px 0;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #f87171;
+    }
+
+    .container {
+      max-width: 500px;
+      margin: 50px auto;
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       text-align: center;
     }
+
+    h2 {
+      color: #1e3a8a;
+      margin-bottom: 20px;
+    }
+
     input {
-      padding: 10px;
-      width: 80%;
-      margin: 10px;
+      width: 90%;
+      padding: 12px;
+      margin: 10px 0;
       border-radius: 8px;
       border: 1px solid #ccc;
     }
+
     button {
-      padding: 10px 20px;
       background-color: #2563eb;
       color: white;
+      padding: 12px 24px;
       border: none;
       border-radius: 8px;
       font-weight: bold;
       cursor: pointer;
     }
+
     button:hover {
       background-color: #1e40af;
+    }
+
+    #loginResponse {
+      margin-top: 15px;
+      color: #1e3a8a;
     }
   </style>
 </head>
 <body>
-  <h2>Đăng nhập</h2>
-  <form id="loginForm">
-    <input type="text" id="username" placeholder="Tên đăng nhập" required><br>
-    <input type="password" id="password" placeholder="Mật khẩu" required><br>
-    <button type="submit">Đăng nhập</button>
-  </form>
-  <p id="loginResponse"></p>
+  <nav>
+    <a href="index.html">Trang chủ</a>
+    <a href="tracuu.html">Tra cứu văn bản</a>
+    <a href="dangky.html">Đăng ký tài khoản</a>
+    <a href="dangnhap.html">Đăng nhập</a>
+  </nav>
+
+  <div class="container">
+    <h2>Đăng nhập</h2>
+    <form id="loginForm">
+      <input type="text" id="username" placeholder="Tên đăng nhập" required><br>
+      <input type="password" id="password" placeholder="Mật khẩu" required><br>
+      <button type="submit">Đăng nhập</button>
+    </form>
+    <p id="loginResponse"></p>
+  </div>
 
   <script>
     document.getElementById("loginForm").addEventListener("submit", function(e) {
@@ -47,9 +97,9 @@
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
-      const url = `YOUR_SCRIPT_URL?username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`;
+      const url = `https://script.google.com/macros/s/AKfycbzP28UIak9EL1qIJ3RsVnru_OZHh05y-IosneR7bqJ9RngyLl9z9Gffc6pwF73ruOO3/exec?username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`;
 
-      fetch(https://script.google.com/macros/s/AKfycbzP28UIak9EL1qIJ3RsVnru_OZHh05y-IosneR7bqJ9RngyLl9z9Gffc6pwF73ruOO3/exec)
+      fetch(url)
         .then(res => res.text())
         .then(data => {
           document.getElementById("loginResponse").innerText = data;
