--- a/dangky.html
+++ b/dangky.html
@@ -31,45 +31,17 @@
     }
 
     .container {
-      max-width: 500px;
-      margin: 50px auto;
-      background-color: #fff;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-      text-align: center;
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
     }
 
-    h2 {
-      color: #1e3a8a;
-      margin-bottom: 20px;
-    }
-
-    input {
-      width: 90%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
-
-    button {
-      background-color: #2563eb;
-      color: white;
-      padding: 12px 24px;
+    iframe {
+      width: 100%;
+      height: 650px;
       border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #1e40af;
-    }
-
-    #response {
-      margin-top: 15px;
-      color: #1e3a8a;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
@@ -77,36 +49,13 @@
   <nav>
     <a href="index.html">Trang chủ</a>
     <a href="tracuu.html">Tra cứu văn bản</a>
-    <a href="dangky.html">Đăng ký tài khoản</a>
+    <a href="dangky_embed.html">Đăng ký tài khoản</a>
     <a href="dangnhap.html">Đăng nhập</a>
   </nav>
 
   <div class="container">
-    <h2>Đăng ký tài khoản</h2>
-    <form id="registerForm">
-      <input type="text" id="username" placeholder="Tên đăng nhập" required><br>
-      <input type="password" id="password" placeholder="Mật khẩu" required><br>
-      <button type="submit">Đăng ký</button>
-    </form>
-    <p id="response"></p>
+    <h2 style="text-align:center; color:#1e3a8a;">Đăng ký tài khoản nội bộ</h2>
+    <iframe src="https://script.google.com/macros/s/AKfycbzP28UIak9EL1qIJ3RsVnru_OZHh05y-IosneR7bqJ9RngyLl9z9Gffc6pwF73ruOO3/exec"></iframe>
   </div>
-
-  <script>
-    document.getElementById("registerForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-
-      fetch("https://script.google.com/macros/s/AKfycbzP28UIak9EL1qIJ3RsVnru_OZHh05y-IosneR7bqJ9RngyLl9z9Gffc6pwF73ruOO3/exec", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ username, password })
-      })
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById("response").innerText = data;
-      });
-    });
-  </script>
 </body>
 </html>
